--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-<h1>Sitio en proceso...</h1>
-<h2>Porfavor espere a que este listo...</h2>
+<!doctype html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+      <h1>Sitio en proceso...</h1>
+      <h2>Porfavor espere a que este listo...</h2>
+  </head>
+  <body></body>
+</html>
