Remuevo 2 puntos xD

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
       <h1>Sitio en proceso...</h1>
-      <h2>Porfavor espere a que este listo...</h2>
+      <h2>Porfavor espere a que este listo.</h2>
   </head>
   <body></body>
 </html>
