--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
       <h1>Sitio en proceso...</h1>
       <h2>Porfavor espere a que este listo.</h2>
+      <p>Comienzo a perder la esperanza de que eso va a pasar ;(.</p>
   </head>
   <body></body>
 </html>
