Default Vite app

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-      <h1>Sitio en proceso...</h1>
-      <h2>Porfavor espere a que este listo.</h2>
-      <p>Comienzo a perder la esperanza de que eso va a pasar ;(.</p>
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React + TS</title>
   </head>
-  <body></body>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
