--- a/index.html
+++ b/index.html
@@ -1,2 +1,22 @@
-<h1>Aqui va el portafolio de este furro que no tiene nada mas que hacer.<h1>
+
+<html lang="es">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Futuro portafolio</title>
+</head>
+<h1>Aqui va el portafolio de este <span>¿¿Furro??</span> que no tiene nada mas que hacer.<h1>
   <h2>LOL</h2>
+<style>
+  span{
+    background-color:rgb(0,0,0);
+    transition: 0.5s;
+  }
+  
+  span:hover{
+    background-color: rgb(255,255,255);
+  }
+</style>
+</html>
