--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<html lang="es">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
@@ -12,6 +12,7 @@
 <style>
   span{
     background-color:rgb(0,0,0);
+    border-radius: 10px;
     transition: 0.5s;
   }
   
