--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
-  <title>Futuro portafolio</title>
+  <title>Futuro portafolio.</title>
 </head>
 <h1>Aqui va el portafolio de este <span>¿¿Furro??</span> que no tiene nada mas que hacer.<h1>
   <h2>LOL</h2>
