--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   <link rel="stylesheet" href="style.css" />
   <title>Futuro portafolio.</title>
 </head>
+  <div>
 <h1>Aqui va el portafolio de este <span>¿¿Furro??</span> que no tiene nada mas que hacer.<h1>
   <h2>LOL</h2>
+</div>
+  
 <style>
   span{
     background-color:rgb(0,0,0);
