--- a/index.html
+++ b/index.html
@@ -13,17 +13,14 @@
 </div>
   
 <style>
-  span{
-    background-color:rgb(0,0,0);
-    border-radius: 10px;
-    transition: 0.5s;
-  }
-  
+  --text: #f2e9f1;
+  --background: #170d16;
+  --primary: #c9a0c5;
+  --secondary: #706f3f;
+  --accent: #84aa69;
+
   span:hover{
     background-color: rgb(255,255,255);
-  }
-  div {
-    background-color:#170d16;
   }
 </style>
 </html>
