--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   --accent: #84aa69;
 
   span:hover{
-    background-color: rgb(255,255,255);
+    background-color: secondary;
   }
 </style>
 </html>
