--- a/index.html
+++ b/index.html
@@ -1,26 +1,31 @@
-
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
   <title>Futuro portafolio.</title>
-</head>
-  <div>
-<h1>Aqui va el portafolio de este <span>¿¿Furro??</span> que no tiene nada mas que hacer.<h1>
-  <h2>LOL</h2>
-</div>
-  
-<style>
-  --text: #f2e9f1;
-  --background: #170d16;
-  --primary: #c9a0c5;
-  --secondary: #706f3f;
-  --accent: #84aa69;
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    /* Define las variables de color */
+    :root {
+      --text: #f2e9f1;
+      --background: #170d16;
+      --primary: #c9a0c5;
+      --secondary: #706f3f;
+      --accent: #84aa69;
+    }
 
-  span:hover{
-    background-color: secondary;
-  }
-</style>
+    /* Aplica estilos al span cuando se hace hover */
+    span:hover {
+      background-color: var(--secondary);
+    }
+  </style>
+</head>
+<body>
+  <!-- Corrige el cierre de la etiqueta h1 y añade un cierre de la etiqueta body -->
+  <div>
+    <h1>Aqui va el portafolio de este <span>¿¿Furro??</span> que no tiene nada mas que hacer.</h1>
+    <h2>LOL</h2>
+  </div>
+</body>
 </html>
