--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     }
 
     /* Aplica estilos al span cuando se hace hover */
+    body:{
+      background-color: var(--background);
+    }
     span:hover {
       background-color: var(--secondary);
     }
