--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
 
     /* Aplica estilos al span cuando se hace hover */
-    body:{
+    body{
       background-color: var(--background);
     }
     span:hover {
