Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     }
 
     /* Aplica estilos al span cuando se hace hover */
+    span {
+    font-color: var(--text);
+}
     body{
       background-color: var(--background);
     }
