--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     /* Aplica estilos al span cuando se hace hover */
     span {
-    font-color: var(--text);
+    color: var(--text);
 }
     body{
       background-color: var(--background);
