--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     h1 {
     color: var(--text);
 }
+    h2 {
+color: var(--text);
+
+}
     body{
       background-color: var(--background);
     }
