--- a/index.html
+++ b/index.html
@@ -36,5 +36,8 @@ color: var(--text);
     <h1>Aqui va el portafolio de este <span>¿¿Furro??</span> que no tiene nada mas que hacer.</h1>
     <h2>LOL</h2>
   </div>
+  <div>
+    
+  </div>
 </body>
 </html>
