--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ color: var(--text);
     }
     span:hover {
       background-color: var(--secondary);
+      transition-delay:0.5s
     }
   </style>
 </head>
