--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@ color: var(--text);
     body{
       background-color: var(--background);
     }
-    span:hover {
+    span{
       background-color: var(--secondary);
+    }
+    span:hover {
+      background-color: var(--text);
       transition-delay:0.5s
     }
   </style>
