--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@ color: var(--text);
       background-color: var(--background);
     }
     span{
-      background-color: var(--secondary);
+      background-color: var(--background);
+      color: var(--background);
     }
     span:hover {
-      background-color: var(--text);
-      transition-delay:0.5s
+      color: var(--text);
+      transition: 0.5s;
     }
   </style>
 </head>
