--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@ color: var(--text);
       background-color: var(--background);
     }
     span{
-      background-color: var(--background);
-      color: var(--background);
+      background-color: var(--accent);
+      color: var(--accent);
     }
     span:hover {
+      background-color: var(--background);
       color: var(--text);
       transition: 0.5s;
     }
