--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ color: var(--text);
   <!-- Corrige el cierre de la etiqueta h1 y añade un cierre de la etiqueta body -->
   <div>
     <h1>Aqui va el portafolio de este <span>¿¿Furro??</span> que no tiene nada mas que hacer.</h1>
-    <h2>LOL</h2>
+    <h2>LOL, voy a plasmar mi experiencia desde el principio.</h2>
   </div>
   <div>
     
