--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@ color: var(--text);
       background-color: var(--background);
     }
     span{
-      background-color: var(--accent);
-      color: var(--accent);
+      background-color: #000000;
+      color: #000000;
+      border-radius: 30px;
     }
     span:hover {
       background-color: var(--background);
