--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ color: var(--text);
   <!-- Corrige el cierre de la etiqueta h1 y añade un cierre de la etiqueta body -->
   <div>
     <h1>Aqui va el portafolio de este <span>¿¿Furro??</span> que no tiene nada mas que hacer.</h1>
-    <h2>LOL, cada día con menos tiempo, pienso que mis proyectos privados toman tiempo</h2>
+    <h2>LOL, cada día con menos tiempo, pienso que mis proyectos privados toman tiempo, espero comenzar con esto talvez en un par de semanas.</h2>
   </div>
   <div>
     
