--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ color: var(--text);
   <div>
     <h1>Aqui va el portafolio de este <span>¿¿Furro??</span> que no tiene nada mas que hacer.</h1>
     <h2>LOL, cada día con menos tiempo, pienso que mis proyectos privados toman tiempo, espero comenzar con esto talvez en un par de semanas, dependiendo de que tanto me exploten los maestros.</h2>
+    <h2>Otro dia en el que no hago nada y me excuso de este repo.</h2>
   </div>
   <div>
     
